[gd_scene load_steps=28 format=3 uid="uid://byokweh306lna"]

[ext_resource type="Script" uid="uid://dmhvj7nh2ivaa" path="res://Scenes/test_battle.gd" id="1_6gaiu"]
[ext_resource type="Texture2D" uid="uid://inmca152t1bp" path="res://sprites/Game Boy Advance - Final Fantasy 1_ Dawn of Souls - Miscellaneous - Battle Backgrounds.png" id="2_6gaiu"]
[ext_resource type="PackedScene" uid="uid://bdv3cxkycntuu" path="res://Scenes/UI_Stats.tscn" id="3_mqx8m"]
[ext_resource type="PackedScene" uid="uid://bcx5wbef18ma4" path="res://Scenes/UI_Pet.tscn" id="4_0uy25"]
[ext_resource type="Script" uid="uid://utwxkps8jdp4" path="res://Resources/ReversedHBoxContainer.gd" id="4_2mqp7"]
[ext_resource type="Script" uid="uid://dqt44o7ry2l3" path="res://Resources/Abilities/ToyAbility.gd" id="5_0uy25"]
[ext_resource type="Script" uid="uid://co38vrucneg53" path="res://Resources/ToyStats.gd" id="5_mqx8m"]
[ext_resource type="Texture2D" uid="uid://crlcrhp7h24pe" path="res://sprites/Cleric.png" id="6_0uy25"]
[ext_resource type="Texture2D" uid="uid://dx70tur8hxbfg" path="res://sprites/Soldier.png" id="7_mqx8m"]
[ext_resource type="Script" uid="uid://b23o4a8gtrsn2" path="res://Resources/Abilities/CricketAbility.gd" id="8_jws7u"]
[ext_resource type="Texture2D" uid="uid://tofvrpgt6d2g" path="res://sprites/Pirate.png" id="9_0uy25"]
[ext_resource type="Resource" uid="uid://che55albpsrqu" path="res://Resources/ConeSnail.tres" id="10_ddgd5"]
[ext_resource type="Resource" uid="uid://cvj5meur2dhwg" path="res://Resources/Bluebird.tres" id="12_5uxge"]
[ext_resource type="Script" uid="uid://bewisppj8ya1c" path="res://Resources/Abilities/MosquitoAbility.gd" id="12_8jt4i"]

[sub_resource type="AtlasTexture" id="AtlasTexture_v0hm8"]
atlas = ExtResource("2_6gaiu")
region = Rect2(250, 537, 240, 128)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0dyg1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mbdtw"]

[sub_resource type="Resource" id="Resource_ddgd5"]
resource_local_to_scene = true
script = ExtResource("5_0uy25")
trigger = 7
metadata/_custom_type_script = "uid://dqt44o7ry2l3"

[sub_resource type="Resource" id="Resource_8jt4i"]
resource_local_to_scene = true
script = ExtResource("5_mqx8m")
name = "Cleric"
sprite = ExtResource("6_0uy25")
ability = SubResource("Resource_ddgd5")
atk = 5
hp = 16
metadata/_custom_type_script = "uid://co38vrucneg53"

[sub_resource type="Resource" id="Resource_sss1k"]
resource_local_to_scene = true
script = ExtResource("8_jws7u")
trigger = 3
metadata/_custom_type_script = "uid://b23o4a8gtrsn2"

[sub_resource type="Resource" id="Resource_yp3h7"]
resource_local_to_scene = true
script = ExtResource("5_mqx8m")
name = "Cricket"
ability = SubResource("Resource_sss1k")
hp = 3
metadata/_custom_type_script = "uid://co38vrucneg53"

[sub_resource type="Resource" id="Resource_tw5w3"]
resource_local_to_scene = true
script = ExtResource("5_0uy25")
trigger = 1
metadata/_custom_type_script = "uid://dqt44o7ry2l3"

[sub_resource type="Resource" id="Resource_ctw87"]
resource_local_to_scene = true
script = ExtResource("5_mqx8m")
name = "Soldier"
sprite = ExtResource("7_mqx8m")
ability = SubResource("Resource_tw5w3")
atk = 4
hp = 11
tier = 2
metadata/_custom_type_script = "uid://co38vrucneg53"

[sub_resource type="Resource" id="Resource_p7pkm"]
resource_local_to_scene = true
script = ExtResource("5_0uy25")
trigger = 1
metadata/_custom_type_script = "uid://dqt44o7ry2l3"

[sub_resource type="Resource" id="Resource_1lgi8"]
resource_local_to_scene = true
script = ExtResource("5_mqx8m")
name = "Soldier"
sprite = ExtResource("7_mqx8m")
ability = SubResource("Resource_p7pkm")
atk = 4
hp = 11
metadata/_custom_type_script = "uid://co38vrucneg53"

[sub_resource type="Resource" id="Resource_rq8sv"]
script = ExtResource("12_8jt4i")
trigger = 1
metadata/_custom_type_script = "uid://bewisppj8ya1c"

[sub_resource type="Resource" id="Resource_skxg5"]
resource_local_to_scene = true
script = ExtResource("5_mqx8m")
name = "Mosquito"
sprite = ExtResource("9_0uy25")
ability = SubResource("Resource_rq8sv")
atk = 2
hp = 2
metadata/_custom_type_script = "uid://co38vrucneg53"

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
script = ExtResource("1_6gaiu")

[node name="TurnTimer" type="Timer" parent="."]
wait_time = 1.2999999999999998
one_shot = true

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.48962224, 0.48962224, 0.48962218, 1)

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_v0hm8")
stretch_mode = 6

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(208, 88)
layout_mode = 1
anchors_preset = -1
anchor_right = 0.5
offset_left = 16.0
offset_top = 8.0
offset_right = 104.0
offset_bottom = 120.0
theme_override_constants/separation = 8

[node name="ColorRect2" parent="VBoxContainer" instance=ExtResource("3_mqx8m")]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0
theme_override_styles/separator = SubResource("StyleBoxEmpty_0dyg1")

[node name="PlayerTeam" type="Container" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("4_2mqp7")
metadata/_custom_type_script = "uid://utwxkps8jdp4"

[node name="Player_Blank_Space" type="VSeparator" parent="VBoxContainer/PlayerTeam"]
custom_minimum_size = Vector2(88, 40)
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0
theme_override_styles/separator = SubResource("StyleBoxEmpty_mbdtw")

[node name="Player_Pet1" parent="VBoxContainer/PlayerTeam" instance=ExtResource("4_0uy25")]
layout_mode = 2
toy = SubResource("Resource_8jt4i")

[node name="Player_Pet2" parent="VBoxContainer/PlayerTeam" instance=ExtResource("4_0uy25")]
layout_mode = 2
toy = SubResource("Resource_yp3h7")

[node name="Player_Pet3" parent="VBoxContainer/PlayerTeam" instance=ExtResource("4_0uy25")]
layout_mode = 2
toy = ExtResource("10_ddgd5")

[node name="Player_Pet4" parent="VBoxContainer/PlayerTeam" instance=ExtResource("4_0uy25")]
layout_mode = 2
toy = SubResource("Resource_ctw87")

[node name="EnemyTeam" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_constants/separation = 8

[node name="Enemy_Blank_Space" type="VSeparator" parent="VBoxContainer/EnemyTeam"]
custom_minimum_size = Vector2(88, 40)
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0
theme_override_styles/separator = SubResource("StyleBoxEmpty_mbdtw")

[node name="Enemy_Pet1" parent="VBoxContainer/EnemyTeam" instance=ExtResource("4_0uy25")]
layout_mode = 2
toy = SubResource("Resource_1lgi8")

[node name="Enemy_Pet2" parent="VBoxContainer/EnemyTeam" instance=ExtResource("4_0uy25")]
layout_mode = 2
toy = SubResource("Resource_skxg5")

[node name="Enemy_Pet3" parent="VBoxContainer/EnemyTeam" instance=ExtResource("4_0uy25")]
layout_mode = 2
toy = ExtResource("12_5uxge")

[node name="Enemy_Pet4" parent="VBoxContainer/EnemyTeam" instance=ExtResource("4_0uy25")]
layout_mode = 2
toy = ExtResource("12_5uxge")

[connection signal="timeout" from="TurnTimer" to="." method="_on_turn_timer_timeout"]
